--- a/index.html
+++ b/index.html
@@ -3,17 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,700,400,200" rel="stylesheet">
   <title>fantastic-journey</title>
 </head>
 <body>
   <div class="container">
     <div class="item">
       <p class="moji title">maru</p>
-      <p class="moji bun">
-         No Content yet
-      </p>
+        <div class="wrapper">
+          <div class="item2">
+            <p class="moji title2">Marina Arai</p>
+            <br>
+            <p class="moji bun">
+               I'm freshman majoring in faculty of engineering . <br>
+               <br>
+               (programming-)Skill  :  iOS / Web{HTML, CSS, JavaScript} / C <br>
+               <br>
+               Doing : Learning Swift , Web apps and Sketching(drawing) <br>
+               <br>
+               Interested in : Security, Art ...
+
+            </p>
+          </div>
+          <div class="item2 bun2">
+            <p class="hoge">
+              <a href="https://github.com/poohmaru" target="_blank" >GitHub</a>
+              <br>
+              <a href="https://www.instagram.com/maru.tar.gz/" target="_blank">Instagram</a>
+              <br>
+              <a href="https://twitter.com/marunomi_" target="_blank">Twitter</a>
+            </p>
+
+
+          </div>
+        </div>
     </div>
   </div>
+  <footer >©️2018Marina Arai</footer>
 </body>
+
 </html>
